--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -20,7 +20,8 @@
             >keyboard_arrow_right</mat-icon
           >
         </div>
-      </div>
+	  </div>
+	  <div class="active__link"></div>
     </li>
 
     <li class="card">
@@ -43,7 +44,8 @@
             >keyboard_arrow_right</mat-icon
           >
         </div>
-      </div>
+	  </div>
+	  <div class="active__link"></div>
     </li>
     <li class="card active current__slide">
       <div class="image">
@@ -65,7 +67,8 @@
             >keyboard_arrow_right</mat-icon
           >
         </div>
-      </div>
+	  </div>
+	  <div class="active__link"></div>
     </li>
     <li class="card">
       <div class="image">
@@ -87,7 +90,8 @@
             >keyboard_arrow_right</mat-icon
           >
         </div>
-      </div>
+	  </div>
+	  <div class="active__link"></div>
     </li>
     <li class="card">
       <div class="image">
@@ -109,9 +113,16 @@
             >keyboard_arrow_right</mat-icon
           >
         </div>
-      </div>
+	  </div>
+	  <div class="active__link"></div>
     </li>
   </ul>
+  <div class="question">
+    <p>
+      What are you <br />
+      <span>here to do?</span>
+    </p>
+  </div>
 
   <button type="button" class="button_prev">
     <mat-icon aria-hidden="false" aria-label="Example chevrone right"
